FIX: Increase z-index of th element (#253)

--- a/assets/stylesheets/explorer.scss
+++ b/assets/stylesheets/explorer.scss
@@ -311,6 +311,7 @@ table.group-reports {
       top: 0;
       color: var(--primary);
       background: var(--primary-low);
+      z-index: z("base");
     }
   }
 }
